# small-api

./: Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  test.py
src/: app.py  main.py
src/adapters/: adapters_factory.py  byte_4.py  get_block.py
src/cassettes/: test_get_block_info  test_signature_info
src/config/: config.yaml
src/controllers/: http.py
src/core/models/: pagination.py  requests.py  responses.py
src/core/usecases/get_block_info/: __init__.py
src/core/usecases/get_signature_info/: __init__.py
src/ports/: node.py  node_provider.py  provider.py  signatures.py  signatures_provider.py
tests/: conftest.py  test_endpoints.py  test_pagination.py  test_providers.py
tests/cassettes/: test_get_block_info  test_pagination_no_pagination  test_pagination_paginate_page_size_and_number  test_signature_info
