[tool.poetry]
name = "small-api"
version = "0.1.0"
description = ""
authors = ["Sebastian Wdowiarz <wdowiarzsebastian@gmail.com>"]
readme = "README.md"
packages = [{include = "small_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
