[tool.poetry]
name = "small-api"
version = "0.1.0"
description = ""
authors = ["Sebastian Wdowiarz <wdowiarzsebastian@gmail.com>"]
readme = "README.md"
packages = [{include = "small_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
